--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/pro-table": "^3.21.0",
     "@fontsource/be-vietnam": "^4.5.2",
     "@fontsource/poppins": "^5.2.6",
+    "@tanstack/react-query": "^5.90.12",
     "@tinymce/tinymce-react": "^6.3.0",
     "@types/country-list": "^2.1.4",
     "antd": "^6.0.1",
